--- a/history.html
+++ b/history.html
@@ -40,7 +40,7 @@
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/USyoT_Ha_bA" frameborder="0" allowfullscreen></iframe>
 		</p>
 		
-		<p>One person this article influenced was MIT computer scientist <a href="https://en.wikipedia.org/wiki/Ivan_Sutherland">Ivan Sutherland</a>. He followed this vision of human augmentation by exploring interactive sketching on computers, working on a system called Sketchpad, which allowed drawing of segments, arcs, and constraints between shapes. Shapes could be transformed, resized, repositioned, and clipped, and a notion of windowing allowed zooming and panning. The entire interactive experience was stylus-based and the implementation paradigm was object-based. This was the first system to ever demonstrate an interactive dialog with a computer, rather than a "batch processing" programming-based interaction. You can see Sketchpad in action in the video above.</p>
+		<p>One person this article influenced was MIT computer scientist <a href="https://en.wikipedia.org/wiki/Ivan_Sutherland">Ivan Sutherland</a>. He followed this vision of human augmentation by exploring interactive sketching on computers, working on a system called Sketchpad for his dissertation (<a href="#sutherland">Sutherland 1963</a>). Sketchpad allowed drawing of segments, arcs, and constraints between shapes. Shapes could be transformed, resized, repositioned, and clipped, and a notion of windowing allowed zooming and panning. The entire interactive experience was stylus-based and the implementation paradigm was object-based. This was the first system to ever demonstrate an interactive dialog with a computer, rather than a "batch processing" programming-based interaction. You can see Sketchpad in action in the video above.</p>
 
 		<p class="embed-responsive embed-responsive-16by9">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/yJDv-zdhzMY?rel=0" frameborder="0" allowfullscreen></iframe>
@@ -72,13 +72,21 @@
 	
 		<h2>Further reading</h2>
 
-		<p id="bush">Bush, Vannevar (1945). As we may think. The Atlantic Monthly, 176(1), 101-108.</p>
+		<p id="bush">Vannevar Bush (1945). As we may think. The Atlantic Monthly, 176(1), 101-108.</p>
+
+        <p>Stuart K. Card, Thomas P. Moran (1986). <a href="https://doi.org/10.1145/61975.66925">User Technology: From Pointing to Pondering</a>. ACM Conference on the History of Personal Workstations 1986.</p>        
 		
+		<p>Freed, L., & Ishida, S. (1995). History of computers. Ziff-Davis Publishing Co.</p>
+		
+		<p>James Gleick and Rob Shapiro (2011). The information.</p>
+		
+		<p>Brad A. Myers (1998). <a href="http://dx.doi.org/10.1145/274430.274436">A brief history of human-computer interaction technology</a>. interactions 5, 2 (March 1998), 44-54.</p>
+
 		<p>Brad Myers, Scott E. Hudson, and Randy Pausch (2000). <a href="https://doi.org/10.1145/344949.344959">Past, Present and Future of User Interface Software Tools</a>. ACM Transactions on Computer-Human Interaction, 7(1), 3-28.</p>
 		
-        <p>Stuart K. Card, Thomas P. Moran (1986). <a href="https://doi.org/10.1145/61975.66925">User Technology: From Pointing to Pondering</a>. ACM Conference on the History of Personal Workstations 1986.</p>
-        
-
+		<p>Andries van Dam (1997). <a href="http://dx.doi.org/10.1145/253671.253708">Post-WIMP user interfaces</a>. Communications of the ACM 40, 2, 63-67.</p>
+		
+		<p id="sutherland">Ivan Sutherland (1963/2003). <a href="http://www.cl.cam.ac.uk/TechReports/UCAM-CL-TR-574.pdf">Sketchpad, A Man-Machine Graphical Communication System</a>. PhD Thesis at Massachusetts Institute of Technology, online version and editors' introduction by A.F. Blackwell & K. Rodden. Technical Report 574. Cambridge University Computer Laboratory.
 	
 	</body>
 	
