--- a/theory.html
+++ b/theory.html
@@ -22,8 +22,8 @@
 
 		<p><a href="index.html">Back to table of contents</a></p>
 
-		<img src="images/architecture.jpg" class="img-responsive" />
-		<small>Credit: CC0 License, public domain</small>
+		<img src="images/theory.jpg" class="img-responsive" />
+		<small>Credit: Andrew J. Ko</small>
 		
 		<h1>A theory of user interfaces</h1>
 		<div class="lead">Andrew J. Ko</div>
