Added a recap and grand challenge.

--- a/theory.html
+++ b/theory.html
@@ -71,7 +71,18 @@
 		
 		<h2>You said theory was useful...</h2>
 		
-		<p>You have some new concepts about user interfaces, and an underlying theoretical sense about what user interfaces are and why designing them is hard. What do you do with this knowledge? Well, given that the world is <em>constantly</em> designing new user interfaces, and the HCI research community believes these ideas about user interfaces are fundamental to all user interfaces, not just the 2D graphical user interfaces we've lived with since 1960, every single time you design a user interface, you'll have to solve these problems. Starting from this theoretical view of user interfaces allows you to ask the right questions. For example, rather than trying to vaguely identify the most "intuitive" experience, you can systematically ask: "Exactly how will our software behave and how will our user interface effectively teach this behavior?" Approaching user interface design and evaluation from this perspective will help you identify major gaps in your user interface design analytically and systematically, rather than relying only on observations of someone struggling to use an interface.</p>
+		<p>You have some new concepts about user interfaces, and an underlying theoretical sense about what user interfaces are and why designing them is hard. Let's recap them:</p>
+		
+		<ul>
+			<li>User interfaces bridge human goals and cognition to functions defined in software</li>
+			<li>To use interfaces successfully, people must learn their affordances and how they map onto goals</li>
+			<li>This learning must comes from somewhere, either instruction by people or instruction by the user interface or some related documentation.</li>
+			<li>Most user interfaces have large gulfs of execution and evaluation, requiring substantial learning.</li>
+		</ul>
+		
+		<p>The grand challenge of user interface design is therefore trying to conceive of interaction paradigms that have small gulfs of execution and evaluation, while also offering expressiveness, efficiency, power, and other attributes that augment human ability.</li>
+		
+		<p>What do you do with these ideas? Well, given that the world is <em>constantly</em> designing new user interfaces, and the HCI research community believes these ideas about user interfaces are fundamental to all user interfaces, not just the 2D graphical user interfaces we've lived with since 1960, every single time you design a user interface, you'll have to solve these problems. Starting from this theoretical view of user interfaces allows you to ask the right questions. For example, rather than trying to vaguely identify the most "intuitive" experience, you can systematically ask: "Exactly how will our software behave and how will our user interface effectively teach this behavior?" Approaching user interface design and evaluation from this perspective will help you identify major gaps in your user interface design analytically and systematically, rather than relying only on observations of someone struggling to use an interface.</p>
 		
 		<p>In the rest of this book, I'll use the theoretical ideas above to explain how different types of user interface paradigms work, and why they need to work that way.</p>
 
