Organizational revisions to headers.

--- a/theory.html
+++ b/theory.html
@@ -44,8 +44,6 @@
 		
 		<p>Don Norman, in his book "The Design of Everyday Things" (<a href="#norman">Norman 2013</a>) does a nice job giving labels to some of the challenges that arise in this learning. One of his first big ideas is the <strong>gulf of execution</strong>. This gulf describes the massive knowledge gap that a person has when trying to learn what actions they can perform on an interface that will allow them to achieve their goal. To illustrate, see if you can think back to the first time you used a computer mouse and a graphical user interface and wanted to learn to play a game or learn something on the internet. In that moment, you experienced a gulf of execution: what did you have to do with the mouse to achieve those goals? What concepts did you have to learn to understand that the internet is accessed by launching an "application" and providing a "query"? You didn't know that massive space of possible actions. You didn't have the concepts to even imagine those actions. Someone or something had to "bridge" that gulf of execution, teaching you some of the actions that were possible and how those actions mapped onto your goals. (They probably also had to teach you the goals, but that's less about user interfaces and more about culture). Learning is therefore at the heart of both using user interfaces and designing them (<a href="#grossman">Grossman et al. 2009</a>).</p>
 
-		<h2>Bridging the Gulfs of Execution and Evaluation</h2>
-
 		<p>What is it that people need to learn to take action on an interface? Norman (and later <a href="#gaver">Gaver 1991</a>, <a href="#hartson">Hartson 2003</a>), argued that what we're really learning is <strong>affordances</strong>. Hartson breaks down affordances into four distinct types:</p>
 		
 		<ul>
@@ -69,7 +67,7 @@
 		
 		<p>Note that in this entire discussion, we've said little about tasks or goals. The broader HCI literature theorizes about those broadly (<a href="#rogers">Rogers 2012</a>, <a href="#jacko">Jacko 2012</a>), and the gist is this: rarely does a person have such a well-defined goal in their head that tasks can be perfectly define to fit them. You can have a seamless, well-defined interaction flow for adding tissues to carts, and checking out with carts, but if a person's goal was vaguely "get some tissues that don't hurt my skin, but also don't cost much," the breakdown in your user interface may occur long after a person has used your user interface, after a few days of actually using the tissues, finding them uncomfortable, and therefore not worth the cost. Getting the low-level details of user interface design to be learnable is one challenge&mdash;designing experiences that support vague, shifting, unobservable human goals is an entirely different one.</p>
 		
-		<h2>You said theory was useful...</h2>
+		<h2>How is this theory useful</h2>
 		
 		<p>You have some new concepts about user interfaces, and an underlying theoretical sense about what user interfaces are and why designing them is hard. Let's recap them:</p>
 		
