Draft of mediation chapter.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<td>Chapter 2. <a href="theory.html">A theory of user interfaces</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 3. <a href="mediation.html">How user interfaces mediate</a></td>
+				<td>Chapter 3. <a href="mediation.html">What interfaces mediate</a></td>
 			</tr>
 			<tr>
 				<td>Chapter 4. <a href="declarative.html">Declarative interaction paradigms</a></td>
