First draft of declarative interfaces chapter.

--- a/mediation.html
+++ b/mediation.html
@@ -74,7 +74,7 @@
 		
 		<p>Because of each of these interfaces must teach different things, one must know foundations of <em>what</em> is being mediated to design effective interfaces. Throughout the rest of this book, we'll review both the foundations of user interface implementation, but also how the subject of mediation constrains and influences what we implement.</p>
 
-		<center class="lead"><a href="declarative.html">Next chapter: Declarative interaction paradigms</a></center>
+		<center class="lead"><a href="declarative.html">Next chapter: Declarative interfaces</a></center>
 	
 		<h2>Further reading</h2>
 
