Revised about text, added Eric, added GitHub.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 		<small>Credit: Andrew J. Ko</small>
 		
 		<h1>User Interface Software and Technology</h1>
-		<div class="lead"><a href="http://faculty.uw.edu/ajko">Andrew J. Ko</a></div>
+		<div class="lead"><a href="http://faculty.uw.edu/ajko">Andrew J. Ko</a> <small>with contributions from <a href="http://www.ericwhitmire.com/">Eric Whitmire</a></small></div>
 
 		<table class="table">
 			<tr>
 				<td rowspan="16" width="50%">
-					<p>The HCI community has a long history of innovation in user interface technologies, but there are few surveys or review of all of this research. This book attempts to summarize all of this knowledge, providing a living online textbook for UX designers, researchers, and design-minded engineers to learn from and leverage in their work.</p>
+					<p>The HCI community has a long history of innovation in user interface software and technologies, but there are few surveys or review of all of this research. This book attempts to summarize much of this knowledge, providing a living online textbook for UX designers, researchers, and design-literate developers to learn from and leverage this ever-expanding body of knowledge.</p>
 
-					<p>I hope you enjoy! If not, please send me feedback.</p>
+					<p>I hope you enjoy! If not, please file an <a href="https://github.com/andyjko/user-interface-software-and-technology/issues/new">issue</a> on the <a href="https://github.com/andyjko/user-interface-software-and-technology/">the book's GitHub repository</a>.</p>
 				</td>
 				<td>Chapter 1. <a href="history.html">A history of user interfaces</a></td>
 			</tr>
