Simplified chapter titles.

--- a/declarative.html
+++ b/declarative.html
@@ -89,7 +89,7 @@
 
 		<p>One way to think about all of these innovations is as trying to bring all of the benefits of graphical user interfaces&mdash;immediate feedback, direct manipulation, and concreteness&mdash;to notations that inherently don't have those properties, by augmenting programming <em>environments</em> with these features. This progress is blurring the distinction between declarative interfaces and interactive interfaces, bringing the power of programming to broader and more diverse audiences.</p>
 		
-		<center class="lead"><a href="interactive.html">Next chapter: Interactive interfaces</a></center>
+		<center class="lead"><a href="interactive.html">Next chapter: Interactive mediation</a></center>
 	
 		<h2>Further reading</h2>
 
