--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 				<td>Chapter 3. <a href="mediation.html">What interfaces mediate</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 4. <a href="declarative.html">Declarative interaction paradigms</a></td>
+				<td>Chapter 4. <a href="declarative.html">Declarative mediation</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 5. <a href="interactive.html">Interactive interaction paradigms</a></td>
+				<td>Chapter 5. <a href="interactive.html">Interactive mediation</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 6. <a href="architecture.html">User interface software architecture</a></td>
+				<td>Chapter 6. <a href="architecture.html">Architecture</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 7. <a href="accessibility.html">User interface accessibility</a></td>
+				<td>Chapter 7. <a href="accessibility.html">Accessibility</a></td>
 			</tr>
 			<tr>
 				<td>Chapter 8. <a href="pointing.html">Pointing</a></td>
