Fixed #8, adding alt tags to all book images.

--- a/architecture.html
+++ b/architecture.html
@@ -22,7 +22,7 @@
 
 		<p><a href="index.html">Back to table of contents</a></p>
 
-		<img src="images/angola.jpg" class="img-responsive" />
+		<img src="images/angola.jpg" class="img-responsive" alt="A modern architecture of an apartment building, figuratively resembling software architecture." />
 		<small>Modern architecture in Luanda, Angola, as a metaphor for software architecture (Credit: Costa Lopes)</small>
 		
 		<h1>User interface software architecture</h1>
@@ -71,7 +71,7 @@
 			Here is the <em>architecture</em> of a very simple button:
 		</p>
 
-		<img src="images/button-architecture.jpg" class="img-responsive" />
+		<img src="images/button-architecture.jpg" class="img-responsive" alt="A diagram of two modes of a simple button: up and down, with a state transition on mouse down and a state transition on mouse up."/>
 
 		<p>
 			This is a simple <strong>state machine</strong> with two states: <em>mouse up</em> (on the left) and <em>mouse down</em> (on the right).
@@ -129,7 +129,7 @@
 			For instance, here's the Facebook post UI we were discussing earlier and its corresponding hierarchy:
 		</p>
 		
-		<img src="images/ui-hierarchy.jpg" class="img-responsive" />
+		<img src="images/ui-hierarchy.jpg" class="img-responsive" alt="A diagram mapping the Facebook post user interface to the component hierarchy it is composed of, including a post, an avatar icon, an editor, a text box, a label, and an emoticon and photo upload widget." />
 
 		<p>
 			Notice how there are some components in the tree above that aren't visible in the UI (the "post", the "editor", the "special input" container).
