--- a/mediation.html
+++ b/mediation.html
@@ -22,7 +22,7 @@
 
 		<p><a href="index.html">Back to table of contents</a></p>
 
-		<img src="images/library.jpg" class="img-responsive" />
+		<img src="images/library.jpg" class="img-responsive" alt="A photograph of a library in Goteborg Sweden" />
 		<small>Credit: Marcus Hansson, Goteborg Sweden</small>
 		
 		<h1>What interfaces mediate</h1>
