--- a/theory.html
+++ b/theory.html
@@ -22,7 +22,8 @@
 
 		<p><a href="index.html">Back to table of contents</a></p>
 
-		<img src="images/theory.jpg" class="img-responsive" />
+		<img src="images/theory.jpg" class="img-responsive" alt="On the left, a diagram of a person and their thoughts about a shopping card; on the right, a user interface presenting a shopping cart, mediating mathematical functions that model shopping carts." />
+
 		<small>Credit: Andrew J. Ko</small>
 		
 		<h1>A theory of user interfaces</h1>
