--- a/accessibility.html
+++ b/accessibility.html
@@ -22,7 +22,7 @@
 
 		<p><a href="index.html">Back to table of contents</a></p>
 
-		<img src="images/braille.jpg" class="img-responsive" />
+		<img src="images/braille.jpg" class="img-responsive" alt="A braille numeric keypad" />
 		<small>By redspotted from London, UK (ATM keypad 2/4) [CC BY 2.0], via Wikimedia Commons</small>
 		
 		<h1>Accessibility</h1>
@@ -84,7 +84,7 @@
 		</p>
 		
 		<p>
-			<img src="images/modalities.jpg" class="img-responsive center-block" />
+			<img src="images/modalities.jpg" class="img-responsive center-block" alt="A diagram showing fingers, speech, and a mouse as input to a function, with screens, sound, and tactile feedback as output." />
 			<center><em>Universal interfaces allow functions to be invoked through any input modality, and allow function's output and side effects to be perceived through any output modality.</em></center>
 		</p>
 		
@@ -132,7 +132,7 @@
 		</p>
 
 		<p>
-			<img src="images/edgewrite.png" class="img-responsive center-block" />
+			<img src="images/edgewrite.png" class="img-responsive center-block" alt="The EdgeWrite gesture set, which includes an alphabet that involves tracing along edges of a square. The gestures resemble Roman characters." />
 			<center>The EdgeWrite gesture set.</center>
 		</p>
 
