--- a/history.html
+++ b/history.html
@@ -22,7 +22,7 @@
 
 		<p><a href="index.html">Back to table of contents</a></p>
 
-		<img src="images/mouse.jpg" class="img-responsive" />
+		<img src="images/mouse.jpg" class="img-responsive" alt="An image of the original Englebart mouse, made of wood and a little red push button." />
 		<small>Credit: Michael Hicks, St. Paul, MN, USA</small>
 		
 		<h1>A history of user interfaces</h1>
@@ -37,7 +37,7 @@
 			Files, keyboards, mice, and touchscreens&mdash;all of these concepts were invented to solve very real challenges with interacting with computers, and but for a few important people and places in the 20th century, we might have invented entirely different ways of interacting with computers.
 		</p>
 
-		<p><img src="images/punchcards.jpg" class="img-responsive" /></p>
+		<p><img src="images/punchcards.jpg" class="img-responsive" alt="A photograph of a woman using a punchcard machine." /></p>
 		
 		<p>
 			In the beginning of digital computing, all computers were programmed, meaning that <em>all</em> user interfaces were programming interfaces.
