--- a/interactive.html
+++ b/interactive.html
@@ -22,7 +22,7 @@
 
 		<p><a href="index.html">Back to table of contents</a></p>
 
-		<img src="images/xerox-star.jpg" class="img-responsive" />
+		<img src="images/xerox-star.jpg" class="img-responsive" alt="A screenshot of the Xerox star user interface and it's word processing application and desktop" />
 		<small>The Xerox Star's graphical user interface (Credit: Xerox)</small>
 		
 		<h1>Interactive interfaces</h1>
@@ -69,7 +69,7 @@
 		</p>
 		
 		<center>
-			<img src="images/tiled.png" class="img-responsive" />
+			<img src="images/tiled.png" class="img-responsive" alt="A diagram of a window tiling arrangement." />
 			<p>Credit: <a href="myers">Myers 1988</a></p>
 		</center>
 
@@ -97,7 +97,7 @@
 		</p>
 
 		<center>
-			<img src="images/fisheye-menus.png" class="img-responsive" />
+			<img src="images/fisheye-menus.png" class="img-responsive" alt="A screenshot of fisheye menus, showing menu items with different label sizes, some too small to read, and others magnified" />
 			<p>Fisheye menus (Credit: <a href="myers">Bederson 2000</a>)</p>
 		</center>
 
