Renamed cover image.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 
-		<img src="images/io.jpg" class="img-responsive" />		
+		<img src="images/cover.jpg" class="img-responsive" />		
 		<small>Credit: Andrew J. Ko</small>
 		
 		<h1>User Interface Software and Technology</h1>
