--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 				<td>Chapter 9. <a href="text-entry.html">Text entry</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 10. <a href="active-input.html">Active input</a></td>
+				<td>Chapter 10. <a href="hands.html">Hands-based input</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 11. <a href="passive-input.html">Passive input</a></td>
+				<td>Chapter 11. <a href="body.html">Body-based input</a></td>
 			</tr>
 			<tr>
 				<td>Chapter 12. <a href="static-visual-output.html">Static visual output</a></td>
