--- a/text-entry.html
+++ b/text-entry.html
@@ -239,7 +239,7 @@
 			As the world continues to age, and computing moves into every context of our lives, text entry will have to adapt to these shifting contexts and abilities.
 		</p>
 
-		<center class="lead"><a href="text-entry.html">Next chapter: Text entry</a></center>
+		<center class="lead"><a href="hands.html">Next chapter: Hands</a></center>
 	
 		<h2>Further reading</h2>
 
