Better ubicomp intro.

--- a/hands.html
+++ b/hands.html
@@ -29,9 +29,22 @@
 		<div class="lead">Andrew J. Ko</div>
 
 		<p>
-			Thus far, we have discussed two ubiquitous forms of input to computers: <a href="pointing.html">pointing</a> and <a href="text-entry.html">text entry</a>.
-			Both utilize human hands.
-			It's not surprising then that most of the innovation beyond pointing and text has continued to mine the versatility of human hands for input. In this chapter we'll discuss three uses of the hand for input: physically touching a surface, using a pen-shaped object to touch a surface, and moving the hand or wrist to convey a gesture.
+			Thus far, we have discussed two forms of input to computers: <a href="pointing.html">pointing</a> and <a href="text-entry.html">text entry</a>.
+			Both are mostly sufficient for operating most forms of computers.
+			But, as we discussed in our chapter on <a href="history.html">history</a>, interfaces have always been about augmenting human ability and cognition, and so researchers have pushed far beyond pointing and text to explore many new forms of input.
+			Part of the motivation to explore these new boundaries has come from new visions.
+			For instance, in 1991, Mark Weiser, who at the time was head of the very same Xerox PARC that led to the first GUI, wrote in Scientific American about a vision of <em>ubiquitous computing</em> (<a href="">Weiser 1991</a>).
+			In this vision, computing would disappear, become invisible, and become a seamless part of everyday tasks:
+		</p>
+		
+		<blockquote>
+			Hundreds of computers in a room could seem intimidating at first, just as hundreds of volts coursing through wires in the walls did at one time. But like the wires in the walls, these hundreds of computers will come to be invisible to common awareness. People will simply use them unconsciously to accomplish everyday tasks... There are no systems that do well with the diversity of inputs to be found in an embodied virtuality.
+		</blockquote>
+
+		<p>
+			Within this vision, input must move beyond the screen, supporting a wide range of embodied forms of computing.
+			And researchers have deeply explored this vision.
+			We'll begin by focusing on input techniques that rely on hands, just as pointing and text-entry largely have: physically touching a surface, using a pen-shaped object to touch a surface, and moving the hand or wrist to convey a gesture.
 		</p>
 
 		<center>
@@ -208,6 +221,8 @@
 		<p>Yuta Sugiura, Masahiko Inami, and Takeo Igarashi. 2012. <a href="https://doi.org/10.1145/2380116.2380182">A thin stretchable interface for tangential force measurement</a>. In Proceedings of the 25th annual ACM symposium on User interface software and technology (UIST '12). ACM, New York, NY, USA, 529-536.</p>
 
 		<p>Andrew M. Webb, Michel Pahud, Ken Hinckley, and Bill Buxton. 2016. <a href="https://doi.org/10.1145/2984511.2984564">Wearables as Context for Guiard-abiding Bimanual Touch</a>. In Proceedings of the 29th Annual Symposium on User Interface Software and Technology (UIST '16). ACM, New York, NY, USA, 287-300.</p>
+
+		<p>Weiser, M. (1991). The computer for the 21st century. Scientific American, 265(3), 94-104.</p>
 
 		<p>Andrew D. Wilson. 2006. <a href="https://doi.org/10.1145/1166253.1166292">Robust computer vision-based detection of pinching for one and two-handed gesture input</a>. In Proceedings of the 19th annual ACM symposium on User interface software and technology (UIST '06). ACM, New York, NY, USA, 255-258.</p>
 
